fix: apply format

--- a/2016-07-18-windows10-zsh.md
+++ b/2016-07-18-windows10-zsh.md
@@ -3,16 +3,19 @@ title: "Windows10のbashをzshで起動するように変更する"
 date: 2016-07-18
 ---
 
-__この記事は2016/7/18時点のPreview Build 14390に基づきます。__
+**この記事は 2016/7/18 時点の Preview Build 14390 に基づきます。**
+
 - 自分の検証範囲での動作確認のため、環境や処理内容やビルドバージョンによっては動作しません。
 - 内容に誤りや検証不足の項目があった場合はご指摘いただけますと幸いです。
 
 # 概要
-- bash on windowsを__windowsから起動すると__`chsh`によるログインシェル変更が適用されず`/bin/bash`が呼ばれる。(sshでログインすれば適用される。)
-- bash起動時の処理の中に、zshを起動する処理を書く。
+
+- bash on windows を**windows から起動すると**`chsh`によるログインシェル変更が適用されず`/bin/bash`が呼ばれる。(ssh でログインすれば適用される。)
+- bash 起動時の処理の中に、zsh を起動する処理を書く。
 - `/etc/profile`に書いても良いが、`/bin/bash`を書き換えるのが速そうなのでこちらを変更する。
 
 # 手順
+
 - `sudo apt-get install zsh`等で`/bin/zsh`にインストールする。
 - `/bin/bash`を`/bin/bashbin`等に名前を変更する。(念のため、他にもバックアップを作成すると良いです。)
 - `/bin/bash`を以下のように記述する。
@@ -29,16 +32,18 @@ fi
 
 - `sudo chmod 755 /bin/bash`で権限を変更する。
 
-(失敗した際は`C:\Users\{$USER}\AppData\Local\lxss\rootfs\bin`のbashを元のものに戻しましょう。)
+(失敗した際は`C:\Users\{$USER}\AppData\Local\lxss\rootfs\bin`の bash を元のものに戻しましょう。)
 
 # 補足
+
 - `/etc/profile`を読むより前なので、そちらを書き換えるより速いはず。
 - `bash`コマンドでのインストールスクリプト等の実行も問題なさそう。(参考元では動かなかったため)
-- tmuxは$SHELLのshellで起動するので、はじめからzshが起動する。
-- `exec $SHELL -l`でshellを再起動した場合も同じくzshが起動する。
-- 参考元と同様に`pstree`コマンドを実行するとはじめからzshが動いていることになっている。
-- /bin/bashは最初にしか読まれていないようである。(プリントデバッグで検証。)
+- tmux は$SHELL の shell で起動するので、はじめから zsh が起動する。
+- `exec $SHELL -l`で shell を再起動した場合も同じく zsh が起動する。
+- 参考元と同様に`pstree`コマンドを実行するとはじめから zsh が動いていることになっている。
+- /bin/bash は最初にしか読まれていないようである。(プリントデバッグで検証。)
 
 # 参考
-- [Ubuntu on Windows で zshをデフォルトシェルにする - Qiita](http://qiita.com/nsmr0604@github/items/7dd38faed1abd9189a83)
-- [【シェル芸人への道】Bash on Windowsを探検する - Qiita](http://qiita.com/t_nakayama0714/items/9d7cfc5029a9b2ea423d)
+
+- [Ubuntu on Windows で zsh をデフォルトシェルにする - Qiita](http://qiita.com/nsmr0604@github/items/7dd38faed1abd9189a83)
+- [【シェル芸人への道】Bash on Windows を探検する - Qiita](http://qiita.com/t_nakayama0714/items/9d7cfc5029a9b2ea423d)
